Finaly user and, authetication, jwt, cript password, exceptions, authentications routes
